--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -7,13 +7,6 @@ jobs:
   build-ios:
     runs-on: macos-latest
 
-    env:
-      APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-      APP_SCHEME: ${{ secrets.APP_SCHEME }}
-      APP_STORE_CONNECT_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
-      APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
-      APP_STORE_CONNECT_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
-
     steps:
       # 1. Checkout repo
       - name: Checkout repo
@@ -29,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG if Angular 20 (optional)
+      # 4. Patch PrimeNG for Angular 20 (if needed)
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
@@ -41,42 +34,35 @@ jobs:
           npm run build
           npx cap sync ios
 
-      # 6. Install fastlane
+      # 6. Save App Store Connect API key
+      - name: Save App Store Connect key
+        run: |
+          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 --decode > AuthKey.json
+
+      # 7. Install Fastlane
       - name: Install Fastlane
         run: sudo gem install fastlane
 
-      # 7. Match / Generate certificates & provisioning profiles via App Store Connect API
-      - name: Generate signing credentials
+      # 8. Use Fastlane match to manage certificates & provisioning
+      - name: Match Certificates & Profiles
         run: |
-          echo "$APP_STORE_CONNECT_KEY" > AuthKey.p8
-          fastlane match development \
-            --type ios \
-            --readonly false \
-            --app_identifier $APP_IDENTIFIER \
-            --username YOUR_APPLE_ID_EMAIL \
-            --api_key_path AuthKey.p8 \
-            --api_key_id $APP_STORE_CONNECT_KEY_ID \
-            --api_issuer_id $APP_STORE_CONNECT_ISSUER_ID
           fastlane match appstore \
             --type ios \
-            --readonly false \
-            --app_identifier $APP_IDENTIFIER \
-            --username YOUR_APPLE_ID_EMAIL \
-            --api_key_path AuthKey.p8 \
-            --api_key_id $APP_STORE_CONNECT_KEY_ID \
-            --api_issuer_id $APP_STORE_CONNECT_ISSUER_ID
+            --readonly true \
+            --app_identifier ${{ secrets.APP_IDENTIFIER }} \
+            --api_key AuthKey.json
 
-      # 8. Build and archive with Xcode
+      # 9. Build and archive with Xcode
       - name: Build with Xcode
         run: |
           cd ios/App
           xcodebuild -workspace App.xcworkspace \
-                     -scheme $APP_SCHEME \
+                     -scheme "${{ secrets.APP_SCHEME }}" \
                      -sdk iphoneos \
-                     -configuration Release \
-                     archive -archivePath $PWD/build/App.xcarchive
+                     -configuration Release archive \
+                     -archivePath $PWD/build/App.xcarchive
 
-      # 9. Export IPA
+      # 10. Export IPA
       - name: Export IPA
         run: |
           xcodebuild -exportArchive \
@@ -84,7 +70,7 @@ jobs:
                      -exportOptionsPlist ios/App/exportOptions.plist \
                      -exportPath output
 
-      # 10. Upload IPA artifact
+      # 11. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
