--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: 20
 
-      # 3. Install npm dependencies
-      - name: Install dependencies
+      # 3. Install dependencies
+      - name: Install npm dependencies
         run: npm install --legacy-peer-deps
 
       # 4. Patch PrimeNG for Angular 20 (if needed)
@@ -34,33 +34,35 @@ jobs:
           npm run build
           npx cap sync ios
 
-      # 6. Save App Store Connect API key
-      - name: Save App Store Connect key
+      # 6. Install Ruby & Fastlane
+      - name: Setup Ruby & Fastlane
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2
+          bundler-cache: true
+
+      # 7. Save App Store Connect API key from secret
+      - name: Save App Store Connect Key
         run: |
-          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 --decode > AuthKey.json
+          echo "${{ secrets.APP_STORE_CONNECT_KEY }}" > AuthKey.json
 
-      # 7. Install Fastlane
-      - name: Install Fastlane
-        run: sudo gem install fastlane
-
-      # 8. Use Fastlane match to manage certificates & provisioning
-      - name: Match Certificates & Profiles
+      # 8. Use Fastlane match to fetch certificates & profiles
+      - name: Fetch certificates & provisioning profiles
         run: |
           fastlane match appstore \
-            --type ios \
             --readonly true \
-            --app_identifier ${{ secrets.APP_IDENTIFIER }} \
+            --app_identifier "${{ secrets.APP_IDENTIFIER }}" \
             --api_key AuthKey.json
 
-      # 9. Build and archive with Xcode
+      # 9. Build & archive with Xcode
       - name: Build with Xcode
         run: |
           cd ios/App
           xcodebuild -workspace App.xcworkspace \
                      -scheme "${{ secrets.APP_SCHEME }}" \
                      -sdk iphoneos \
-                     -configuration Release archive \
-                     -archivePath $PWD/build/App.xcarchive
+                     -configuration Release \
+                     archive -archivePath $PWD/build/App.xcarchive
 
       # 10. Export IPA
       - name: Export IPA
@@ -70,7 +72,7 @@ jobs:
                      -exportOptionsPlist ios/App/exportOptions.plist \
                      -exportPath output
 
-      # 11. Upload IPA artifact
+      # 11. Upload artifact (IPA file)
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
