--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -8,33 +8,27 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      # 1. Checkout repo
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2. Setup Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # 3. Install npm dependencies
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG (if using Angular 20)
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
           sed -i '' 's/| InjectFlags//g' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
 
-      # 5. Build Ionic project for iOS
       - name: Build Ionic iOS
         run: |
           npm run build
           npx cap sync ios
 
-      # 6. Setup Ruby & Fastlane
       - name: Setup Ruby & Fastlane
         uses: ruby/setup-ruby@v1
         with:
@@ -42,37 +36,23 @@ jobs:
           bundler-cache: true
 
       - name: Install Fastlane
-        run: gem install fastlane -v 2.227.0
+        run: gem install fastlane -v 2.228.0
 
-      # 7. Setup App Store Connect API key
       - name: Setup API Key
-        run: |
-          echo "${{ secrets.APP_STORE_CONNECT_KEY }}" > AuthKey.p8
+        run: echo "${{ secrets.APP_STORE_CONNECT_KEY }}" > AuthKey.p8
         env:
           APP_STORE_CONNECT_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
 
-      # 8. Fetch certificates & provisioning profiles with match
-      - name: Fetch certificates & provisioning profiles
+      - name: Build & Sign iOS with API key
         run: |
-          fastlane match appstore \
-            --readonly true \
-            --app_identifier "${{ secrets.APP_IDENTIFIER }}" \
-            --api_key_path AuthKey.p8
-          
-      # 9. Build and archive with Xcode
-      - name: Build with Xcode
-        run: |
-          cd ios/App
-          xcodebuild -workspace App.xcworkspace -scheme "${{ secrets.APP_SCHEME }}" -sdk iphoneos -configuration Release archive -archivePath $PWD/build/App.xcarchive
+          fastlane run build_ios_app \
+            workspace: "ios/App/App.xcworkspace" \
+            scheme: "${{ secrets.APP_SCHEME }}" \
+            export_method: "app-store" \
+            api_key_path: "AuthKey.p8"
 
-      # 10. Export IPA
-      - name: Export IPA
-        run: |
-          xcodebuild -exportArchive -archivePath ios/App/build/App.xcarchive -exportOptionsPlist ios/App/exportOptions.plist -exportPath output
-
-      # 11. Upload artifact (IPA file)
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
           name: iOS-IPA
-          path: output/*.ipa
+          path: ios/App/output/*.ipa
