--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -22,19 +22,26 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. Patch PrimeNG for Angular 20 (if needed)
+      # 4. Patch PrimeNG (Angular fix)
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
           sed -i '' 's/| InjectFlags//g' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts
 
-      # 5. Build Ionic project for iOS
+      # 5. Build Ionic and sync iOS
       - name: Build Ionic iOS
         run: |
           npm run build
           npx cap sync ios
 
-      # 6. Setup Ruby & Fastlane
+      # 6. Install CocoaPods & generate workspace
+      - name: Install CocoaPods
+        run: |
+          sudo gem install cocoapods
+          cd ios/App
+          pod install
+
+      # 7. Setup Ruby & Fastlane
       - name: Setup Ruby & Fastlane
         uses: ruby/setup-ruby@v1
         with:
@@ -44,14 +51,14 @@ jobs:
       - name: Install Fastlane
         run: gem install fastlane -v 2.228.0
 
-      # 7. Setup App Store Connect API key
+      # 8. Setup App Store Connect API key
       - name: Setup API Key
         run: echo "${{ secrets.APP_STORE_CONNECT_KEY }}" > AuthKey.p8
         env:
           APP_STORE_CONNECT_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
 
-      # 8. Build & Sign iOS using Fastlane
-      - name: Build & Sign iOS with API key
+      # 9. Build & sign iOS with workspace
+      - name: Build & Sign iOS
         run: |
           fastlane run build_ios_app \
             workspace: "ios/App/App.xcworkspace" \
@@ -59,7 +66,7 @@ jobs:
             export_method: "app-store" \
             api_key_path: "AuthKey.p8"
 
-      # 9. Upload IPA artifact
+      # 10. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
