--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -34,17 +34,17 @@ jobs:
           npm run build
           npx cap sync ios
 
-      # 6. Install CocoaPods
+      # 6. Install CocoaPods and generate valid workspace
       - name: Install CocoaPods
         run: |
           sudo gem install cocoapods
           cd ios/App
-          pod install
+          pod repo update
+          pod install --verbose
 
       # 7. Detect actual .xcworkspace
       - name: Detect workspace
         run: |
-          # Look only at top-level directories under ios/App
           WORKSPACE=$(find ios/App -maxdepth 1 -name "*.xcworkspace" -type d | head -n 1)
           if [ -z "$WORKSPACE" ]; then
             echo "Error: .xcworkspace not found"
@@ -53,7 +53,18 @@ jobs:
           echo "Workspace detected: $WORKSPACE"
           echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
 
-      # 8. Setup Ruby & Fastlane
+      # 8. Verify workspace has schemes
+      - name: Verify workspace schemes
+        run: |
+          cd ios/App
+          xcodebuild -list -workspace "$(basename $WORKSPACE)"
+          # Ensure the scheme exists
+          if ! xcodebuild -list -workspace "$(basename $WORKSPACE)" | grep -q "${{ secrets.APP_SCHEME }}"; then
+            echo "Error: Scheme '${{ secrets.APP_SCHEME }}' not found in workspace"
+            exit 1
+          fi
+
+      # 9. Setup Ruby & Fastlane
       - name: Setup Ruby & Fastlane
         uses: ruby/setup-ruby@v1
         with:
@@ -63,13 +74,13 @@ jobs:
       - name: Install Fastlane
         run: gem install fastlane -v 2.228.0
 
-      # 9. Setup App Store Connect API key
+      # 10. Setup App Store Connect API key
       - name: Setup API Key
         run: echo "${{ secrets.APP_STORE_CONNECT_KEY }}" > AuthKey.p8
         env:
           APP_STORE_CONNECT_KEY: ${{ secrets.APP_STORE_CONNECT_KEY }}
 
-      # 10. Build & sign iOS
+      # 11. Build & sign iOS
       - name: Build & Sign iOS
         run: |
           fastlane run build_ios_app \
@@ -78,7 +89,7 @@ jobs:
             export_method: "app-store" \
             api_key_path: "AuthKey.p8"
 
-      # 11. Upload IPA artifact
+      # 12. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
