--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -53,16 +53,16 @@ jobs:
           echo "Workspace detected: $WORKSPACE"
           echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
 
-      # 8. Verify workspace has schemes
-      - name: Verify workspace schemes
+      # 8. Verify workspace has the correct scheme
+      - name: Verify workspace scheme
         run: |
           cd ios/App
-          xcodebuild -list -workspace "$(basename $WORKSPACE)"
-          # Ensure the scheme exists
-          if ! xcodebuild -list -workspace "$(basename $WORKSPACE)" | grep -q "${{ secrets.APP_SCHEME }}"; then
-            echo "Error: Scheme '${{ secrets.APP_SCHEME }}' not found in workspace"
+          SCHEME="${{ secrets.APP_SCHEME }}"
+          if ! xcodebuild -list -workspace "$(basename $WORKSPACE)" | grep -q "$SCHEME"; then
+            echo "Error: Scheme '$SCHEME' not found in workspace"
             exit 1
           fi
+          echo "Scheme '$SCHEME' verified"
 
       # 9. Setup Ruby & Fastlane
       - name: Setup Ruby & Fastlane
