--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -81,27 +81,27 @@ jobs:
         env:
           APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
-      # 11. Build iOS (only build & sign)
-        - name: Build iOS
-          run: |
-            mkdir -p build/ios
-            fastlane run build_ios_app \
-              workspace:"ios/App/App.xcworkspace" \
-              scheme:"App" \
-              export_method:"app-store" \
-              output_directory:"build/ios"
+      # 11. Build iOS (only build & sign IPA)
+      - name: Build iOS
+        run: |
+          mkdir -p build/ios
+          fastlane run build_ios_app \
+            workspace:"ios/App/App.xcworkspace" \
+            scheme:"App" \
+            export_method:"app-store" \
+            output_directory:"build/ios"
 
-        # 12. Upload to TestFlight / App Store
-        - name: Upload to TestFlight
-          run: |
-            fastlane run upload_to_app_store \
-              api_key_path:"AuthKey.p8" \
-              ipa:"build/ios/App.ipa" \
-              skip_metadata:true \
-              skip_screenshots:true \
-              submit_for_review:false
+      # 12. Upload to App Store (TestFlight)
+      - name: Upload to TestFlight
+        run: |
+          fastlane run upload_to_app_store \
+            api_key_path:"AuthKey.p8" \
+            ipa:"build/ios/App.ipa" \
+            skip_metadata:true \
+            skip_screenshots:true \
+            submit_for_review:false
 
-      # 12. Upload IPA artifact
+      # 13. Upload IPA artifact for GitHub
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
