--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -81,27 +81,18 @@ jobs:
         env:
           APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
-      # 11. Build iOS (only build & sign IPA)
-      - name: Build iOS
+      # 11. Build & sign iOS
+      - name: Build & Sign iOS
         run: |
           mkdir -p build/ios
           fastlane run build_ios_app \
             workspace:"ios/App/App.xcworkspace" \
             scheme:"App" \
             export_method:"app-store" \
-            output_directory:"build/ios"
+            output_directory:"build/ios" \
+            export_team_id:"NPXC63W394"
 
-      # 12. Upload to App Store (TestFlight)
-      - name: Upload to TestFlight
-        run: |
-          fastlane run upload_to_app_store \
-            api_key_path:"AuthKey.p8" \
-            ipa:"build/ios/App.ipa" \
-            skip_metadata:true \
-            skip_screenshots:true \
-            submit_for_review:false
-
-      # 13. Upload IPA artifact for GitHub
+      # 12. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
